--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
 <body>
   <div class="tab">
-    <button class="tablinks" id="m_btn1" onclick="openTab(event, 'suburb')">Пригород</button>
-    <button class="tablinks" id="m_btn2" onclick="openTab(event, 'city')">Город</button>
+    <button class="tablinks" id="m_btn1" onclick="openTab(event, 'city')">Город</button>
+    <button class="tablinks" id="m_btn2" onclick="openTab(event, 'castle')">Замок</button>
     <button class="tablinks" id="m_btn3" onclick="openTab(event, 'outerworld')">Запределье</button>
+    <button class="tablinks" id="m_btn4" onclick="openTab(event, 'upgrades')">Улучшения</button>
     <select class='tablinks select' id="menuselector">
       <option class='head' style="text-align: center;" value="menu">Меню</option>
       <hr />
@@ -36,7 +37,7 @@
       <option value='Import'>Импортировать игру</option>
     </select>
   </div>
-  <div id="suburb" class="tabcontent">
+  <div id="city" class="tabcontent">
     <div class="main_container">
       <div class="head_1">
         <div class="name_head1">&nbsp</div> <!--  пустой div-зашлушка -->
@@ -185,8 +186,15 @@
       <div class="buttons">
         <div class="money">
           <div class="material_line" style="place-self: center;">
+            <div style="display: inline-block;">
+            <b>Монеты</b> <span id="spnMoneyValue">0</span> <img src="static/coin.png"> <span id="spnTaxesValue" style="display: none;">(0/c)</span>
+            </div>
+          </div>
+        </div>
+        <div class="population">
+          <div class="material_line" style="place-self: center;">
             <div>
-            <b>Монеты</b> <span id="spnMoneyValue">0</span> <img src="static/coin.png">
+            <b>Население</b> <span id="spnPopulationValue">0</span> <img src="static/population.png">
             </div>
           </div>
         </div>
@@ -286,11 +294,30 @@
       </div>
     </div>
   </div>
-  <div id="city" class="tabcontent">
-    <p>Заготовка под Город</p>
+  <div id="castle" class="tabcontent">
+    <p>Заготовка под Замок</p>
   </div>
   <div id="outerworld" class="tabcontent">
     <p>Заготовка под Запределье</p>
+  </div>
+
+  <div id="upgrades" class="tabcontent">
+    <div class="improvements">
+      <div class="taxes">
+        <div class="taxes_head">Налоги</div>
+        <div class="upgrade_line">
+          <div><b>Налоги</b><br>Открывает налоги. Что может быть лучше, чем пассивное получение монет.<br><i>- Прирост: насленеие * (уровень улучшения * модификатор налогов (по-умолчанию 1))</i></div>
+          <div><button id="btnUpgTaxes"><span id="spnTaxesUpg">10 000</span> <img src="static/coin.png"></button></div>
+          <div><span id="spnTaxexUpgValue">0</span>/5</div>
+        </div>
+
+
+        <!-- <div class="upgrade_line">Строить</div>
+        <div class="upgrade_line">Построено</div> -->
+        
+      </div>
+      <div> Upgrade 1</div>
+    </div>
   </div>
   <!-- Всплывающие подсказки -->
   <div class="tooltip_templates">
@@ -315,10 +342,9 @@
   </div>
   <!-- ... -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="scripts/game.js"></script>
-  <script src="scripts/page.js"></script>
-  <script src="scripts/ui.js"></script>
-  <script src="scripts/listeners.js"></script>
+  
+  <!-- <script src="scripts/game.js"></script> -->
+  <script src="scripts/loader.js"></script>
   <script>window.onload = gameLoad()</script>
 
   
